compiled the mutant for the first time in ages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ set(vgt_headers
         vgt/topology.h
         vgt/red_black_tree.h
         vgt/red_black_node.h
+        vgt/edge_cls.h
    )
 
 add_library(vgt SHARED ${vgt_sources} ${ads_sources})
