--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,7 +131,7 @@ install(TARGETS vgt math view ads DESTINATION ${INSTALL_LIB_DIR})
 
 #add_executable(test_volumetric_data test/test_volumetric_data.c)
 #add_executable(test_div test/test_div.c)
-#add_executable(test_scalar_field test/test_scalar_field.c)
+add_executable(test_scalar_field test/test_scalar_field.c)
 #add_executable(test_vector_field test/test_vector_field.c)
 #add_executable(test_lapl test/test_lapl.c)
 #add_executable(test_list test/test_list.c)
@@ -144,7 +144,7 @@ add_executable(test_random test/test_random.c)
 
 #target_link_libraries(test_volumetric_data m vgt math)
 #target_link_libraries(test_div m vgt math)
-#target_link_libraries(test_scalar_field m vgt math)
+target_link_libraries(test_scalar_field m vgt)
 #target_link_libraries(test_vector_field m vgt math)
 #target_link_libraries(test_lapl m vgt math)
 #target_link_libraries(test_list m vgt math)
