Got rid of the silly Victor class and started implementing the spectrum

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,8 +84,8 @@ set(vgt_sources
         vgt/mesh.c
         vgt/delaunay.c
         vgt/tet.c
-        vgt/victor.c
         vgt/marching_tets.c
+        vgt/spectrum.c
    )
 
 set(vgt_headers
@@ -99,9 +99,7 @@ set(vgt_headers
         vgt/tet_cls.h
         vgt/tet.h
         vgt/delaunay.h
-        vgt/victor.h
-        vgt/victor_cls.h
-        vgt/half_edge_cls.h
+        vgt/spectrum.h
    )
 
 add_library(vgt ${libtype} ${vgt_sources})
