--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,4 +159,4 @@ target_link_libraries(test_array m vgt math rt)
 #target_link_libraries(test_delaunay vgt view)
 #target_link_libraries(test_random math rt)
 #target_link_libraries(test_mtets vgt view)
-target_link_libraries(test_spectrum m vgt math)
+target_link_libraries(test_spectrum m vgt math view)
