Implemented projection as snapping. Very fast! :D

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,15 @@ cmake_minimum_required (VERSION 2.6)
 project(VGT C)
 
 #set(CMAKE_BUILD_TYPE RelWithDebugInfo)
-#set(CMAKE_BUILD_TYPE Release)
-set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE Debug)
 
 #cmake_policy(SET CMP0003 NEW)
 
 #set(libtype "SHARED")
 
-#set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -O3 -Wall -Werror -Winit-self -Wuninitialized -Wstrict-aliasing -fstrict-aliasing")
-set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -Wall -Werror -Winit-self -Wuninitialized -Wstrict-aliasing -fstrict-aliasing")
+set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -O3 -Wall -Werror -Winit-self -Wuninitialized -Wstrict-aliasing -fstrict-aliasing")
+#set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -Wall -Werror -Winit-self -Wuninitialized -Wstrict-aliasing -fstrict-aliasing")
 
 link_directories("$ENV{CUSTOM_MODULES_PATH}/lib")
 include_directories("$ENV{CUSTOM_MODULES_PATH}/include")
@@ -133,7 +133,7 @@ install(FILES ${view_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/view")
 
 install(TARGETS vgt math view ads DESTINATION ${INSTALL_LIB_DIR})
 
-add_executable(test_volumetric_data test/test_volumetric_data.c)
+#add_executable(test_volumetric_data test/test_volumetric_data.c)
 #add_executable(test_div test/test_div.c)
 #add_executable(test_scalar_field test/test_scalar_field.c)
 #add_executable(test_vector_field test/test_vector_field.c)
@@ -141,14 +141,14 @@ add_executable(test_volumetric_data test/test_volumetric_data.c)
 #add_executable(test_list test/test_list.c)
 #add_executable(test_view test/test_view.c)
 #add_executable(test_mesh test/test_mesh.c)
-add_executable(test_array test/test_array.c)
+#add_executable(test_array test/test_array.c)
 #add_executable(test_vector test/test_vector.c)
 #add_executable(test_delaunay test/test_delaunay.c)
 #add_executable(test_random test/test_random.c)
 #add_executable(test_mtets test/test_marching_tets.c)
 add_executable(test_spectrum test/test_spectrum.c)
 
-target_link_libraries(test_volumetric_data m vgt math)
+#target_link_libraries(test_volumetric_data m vgt math)
 #target_link_libraries(test_div m vgt math)
 #target_link_libraries(test_scalar_field m vgt)
 #target_link_libraries(test_vector_field m vgt math)
@@ -156,7 +156,7 @@ target_link_libraries(test_volumetric_data m vgt math)
 #target_link_libraries(test_list m vgt math)
 #target_link_libraries(test_view view)
 #target_link_libraries(test_mesh vgt)
-target_link_libraries(test_array m vgt math rt)
+#target_link_libraries(test_array m vgt math rt)
 #target_link_libraries(test_vector ads rt)
 #target_link_libraries(test_delaunay vgt view)
 #target_link_libraries(test_random math rt)
